# Rust-Game-of-Life

./: Cargo.toml  README.md
results/: Results.csv
src/: main.rs
